--- a/cggcsWeb/css/weixin_slide.css
+++ b/cggcsWeb/css/weixin_slide.css
@@ -35,7 +35,7 @@
 .flexslider {
     position: relative;
     width: 100%;
-    height: 300px;
+    height: 60%;
     overflow: hidden;
     zoom: 1;
 	z-index:99;
@@ -106,14 +106,14 @@
 
 .flexslider .slides li{
     width: 100%;
-    height: 300px;
+    height: 60%;
     display: block;
 }
 .banner_tit{
     margin-top: 80px;
 }
 .banner_tit2{
-    margin-top: 140px;
+    margin-top: 45%;
 }
 .banner_tit2,.banner_des2{
     text-align: center;
